--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>প্রথমা আই - বাংলাদেশের অগ্রণী অনলাইন সংবাদ মাধ্যম</title>
+    <title>জনতার কন্ঠ- বাংলাদেশের অগ্রণী অনলাইন সংবাদ মাধ্যম</title>
     <meta name="description" content="প্রথমা আই - বাংলাদেশের সর্বশেষ খবর, জাতীয়, আন্তর্জাতিক, খেলাধুলা, প্রযুক্তি ও বিনোদন সংবাদ। সত্য ও নিরপেক্ষ সংবাদ পরিবেশনে আমরা প্রতিজ্ঞাবদ্ধ।" />
     <meta name="author" content="প্রথমা আই সংবাদ" />
     <meta name="keywords" content="বাংলাদেশ, খবর, সংবাদ, জাতীয়, আন্তর্জাতিক, খেলাধুলা, প্রযুক্তি, বিনোদন, প্রথমা আই" />
@@ -13,14 +13,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Bengali:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="প্রথমা আই - বাংলাদেশের অগ্রণী অনলাইন সংবাদ মাধ্যম" />
+    <meta property="og:title" content="জনতার কন্ঠ - বাংলাদেশের অগ্রণী অনলাইন সংবাদ মাধ্যম" />
     <meta property="og:description" content="বাংলাদেশের সর্বশেষ খবর, জাতীয়, আন্তর্জাতিক, খেলাধুলা, প্রযুক্তি ও বিনোদন সংবাদ।" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image"  />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" />
+    <meta name="twitter:image"  />
   </head>
 
   <body>
