updated admin panel

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>জনতার কন্ঠ- বাংলাদেশের অগ্রণী অনলাইন সংবাদ মাধ্যম</title>
-    <meta name="description" content="প্রথমা আই - বাংলাদেশের সর্বশেষ খবর, জাতীয়, আন্তর্জাতিক, খেলাধুলা, প্রযুক্তি ও বিনোদন সংবাদ। সত্য ও নিরপেক্ষ সংবাদ পরিবেশনে আমরা প্রতিজ্ঞাবদ্ধ।" />
-    <meta name="author" content="প্রথমা আই সংবাদ" />
-    <meta name="keywords" content="বাংলাদেশ, খবর, সংবাদ, জাতীয়, আন্তর্জাতিক, খেলাধুলা, প্রযুক্তি, বিনোদন, প্রথমা আই" />
+    <meta name="description" content="জনতার কন্ঠ - বাংলাদেশের সর্বশেষ খবর, জাতীয়, আন্তর্জাতিক, খেলাধুলা, প্রযুক্তি ও বিনোদন সংবাদ। সত্য ও নিরপেক্ষ সংবাদ পরিবেশনে আমরা প্রতিজ্ঞাবদ্ধ।" />
+    <meta name="author" content="জনতার কন্ঠ সংবাদ" />
+    <meta name="keywords" content="বাংলাদেশ, খবর, সংবাদ, জাতীয়, আন্তর্জাতিক, খেলাধুলা, প্রযুক্তি, বিনোদন, জনতার কন্ঠ" />
     
     <!-- Google Fonts for Bengali and English -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
